--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,6 +5,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 
 
+html {
+	font-size: 14px
+}
+
 body {
 	@apply bg-dark text-white;
 }
